--- a/ADF/tenants/AVD/Global-Config.json
+++ b/ADF/tenants/AVD/Global-Config.json
@@ -1720,6 +1720,10 @@
       "Id": "8e3af657-a8ff-443c-a75c-2fe8c4bcb635",
       "Description": "Grants full access to manage all resources, including the ability to assign roles in Azure RBAC."
     },
+    "PE_SF_App_Contributor": {
+      "Id": "07d3b4c1-5fdf-589e-ab84-eb7ac5b35374",
+      "Description": "Manage Service Fabric Applications"
+    },
     "PlayFab Contributor": {
       "Id": "0c8b84dc-067c-4039-9615-fa1a4b77c726",
       "Description": "Provides contributor access to PlayFab resources"
